[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/GameBoard/GameGrid.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/UI/Game/HUD/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UI/Queue/Queue.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/GameBoard/Board.gd" type="Script" id=5]
[ext_resource path="res://src/UI/Game/WordLabel.tscn" type="PackedScene" id=8]

[node name="GameBoard" type="Node2D"]
script = ExtResource( 5 )
drag_offset = Vector2( -130, -100 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 576, 272 )
current = true
zoom = Vector2( 1.5, 1.5 )

[node name="GameGrid" parent="." instance=ExtResource( 1 )]
cell_size = Vector2( 80, 80 )

[node name="Blocks" type="Node2D" parent="."]
visible = false
position = Vector2( 1368, 736 )
z_index = -3

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Queue" parent="CanvasLayer" instance=ExtResource( 4 )]
anchor_left = 0.726563
anchor_top = 0.115
anchor_right = 0.96875
anchor_bottom = 0.96

[node name="TimeLimit" type="Timer" parent="."]
one_shot = true

[node name="ResourcePreloader" type="ResourcePreloader" parent="."]
resources = [ PackedStringArray( "WordLabel" ), [ ExtResource( 8 ) ] ]

[node name="HintTimer" type="Timer" parent="."]
wait_time = 100.0
one_shot = true
autostart = true

[connection signal="game_started" from="." to="HUD" method="_on_game_started"]
[connection signal="level_changed" from="." to="HUD" method="_on_GameBoard_level_changed"]
[connection signal="total_score_changed" from="." to="HUD" method="_on_GameBoard_total_score_changed"]
[connection signal="timeout" from="HintTimer" to="." method="_on_HintTimer_timeout"]
